updated cluster configuration
Cluster configuration in DB.
single machine cluster parameter server strategy working fine.

--- a/train/templates/wrapper/left_section.html
+++ b/train/templates/wrapper/left_section.html
@@ -27,6 +27,11 @@
 						<p>Tranings</p>
 					</a>
 				</li>
+				<li class="nav-item">
+					<a href="{% url 'list_cluster_nodes' %}" class="nav-link"> <i class="nav-icon fas fa-microscope"></i>
+						<p>Cluster Configuration</p>
+					</a>
+				</li>
 				 
 				 
 			</ul>		 
