cluster and without cluster working with results

--- a/train/templates/wrapper/left_section.html
+++ b/train/templates/wrapper/left_section.html
@@ -28,7 +28,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="{% url 'list_cluster_nodes' %}" class="nav-link"> <i class="nav-icon fas fa-microscope"></i>
+					<a href="{% url 'list_cluster_nodes' %}" class="nav-link"> <i class="nav-icon fas fa fa-server"></i>
 						<p>Cluster Configuration</p>
 					</a>
 				</li>
